--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-7.36MB/s(Youtube:不良林), server: shanghai-router1-892412-jp4.dukou.info, port: 6304, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: shanghai-router1-892412-jp4.dukou.info, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.17MB/s(Youtube:不良林), server: 167.88.61.2, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 (已存活1天)中国-9.20MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.00MB/s(Youtube:不良林), server: sg-cn-hk-relay-2-54bc52.dukou.info, port: 9302, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: sg-cn-hk-relay-2-54bc52.dukou.info, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.84MB/s(Youtube:不良林), server: tw-cn-hk-relay-1-97861a.dukou.info, port: 5301, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: tw-cn-hk-relay-1-97861a.dukou.info, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.07MB/s(Youtube:不良林), server: sg-cn-relay-6-689145.dukou.info, port: 9306, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: sg-cn-relay-6-689145.dukou.info, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.38MB/s(Youtube:不良林), server: us-cn-hk-relay-4-bd5e54.dukou.info, port: 7304, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: us-cn-hk-relay-4-bd5e54.dukou.info, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.78MB/s(Youtube:不良林), server: ru01-cu-1120.dukou.info, port: 2301, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: ru01-cu-1120.dukou.info, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-18.22MB/s(Youtube:不良林), server: hk-route-12369-1.dukou.info, port: 8301, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: hk-route-12369-1.dukou.info, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-714.2KB/s(Youtube:不良林), server: zh01lv5tw03.feiguayun.xyz, port: 31187, type: ss, cipher: aes-256-gcm, password: 763d291b-90ac-49a2-90c5-12bd393d4f45}
+  - {name: 🇨🇳 中国-6.48MB/s(Youtube:不良林), server: shanghai-router2-hk5-5478.dukou.info, port: 8305, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: shanghai-router2-hk5-5478.dukou.info, skip-cert-verify: true}
   - {name: 🇨🇳 中国-6.15MB/s(Youtube:不良林), server: sg-cn-hk-relay-5-51f087.dukou.info, port: 9305, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: sg-cn-hk-relay-5-51f087.dukou.info, skip-cert-verify: true}
   - {name: 🇨🇳 中国-4.46MB/s(Youtube:不良林), server: us-cn-hk-relay-3-49ae82.dukou.info, port: 7303, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: us-cn-hk-relay-3-49ae82.dukou.info, skip-cert-verify: true}
   - {name: 🇨🇳 中国-4.28MB/s(Youtube:不良林), server: hk-route-12369-us5.dukou.info, port: 7005, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: hk-route-12369-us5.dukou.info, skip-cert-verify: true}
   - {name: 🇨🇳 中国-6.59MB/s(Youtube:不良林), server: sg-cn-hk-relay-3-dd4440.dukou.info, port: 9303, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: sg-cn-hk-relay-3-dd4440.dukou.info, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-442.2KB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-9.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-714.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.48MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.15MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
-      - 🇩🇪 德国-442.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-7.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-9.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-714.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.48MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.15MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
-      - 🇩🇪 德国-442.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-9.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-714.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.48MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.15MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
-      - 🇩🇪 德国-442.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-7.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-9.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-714.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.48MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.15MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
-      - 🇩🇪 德国-442.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-9.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-714.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.48MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.15MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
-      - 🇩🇪 德国-442.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-9.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-714.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.48MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.15MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
-      - 🇩🇪 德国-442.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.36MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇨🇳 (已存活1天)中国-9.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-714.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.48MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.15MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-4.28MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
-      - 🇩🇪 德国-442.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
