--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-5.79MB/s(Youtube:不良林), server: sg-cn-hk-relay-5-51f087.dukou.info, port: 9305, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: sg-cn-hk-relay-5-51f087.dukou.info, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-225.5KB/s(Youtube:不良林), server: zh01lv5tw03.feiguayun.xyz, port: 31187, type: ss, cipher: aes-256-gcm, password: 763d291b-90ac-49a2-90c5-12bd393d4f45}
-  - {name: 🇺🇸 美国-557.7KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.28MB/s(Youtube:不良林), server: shanghai-router2-hk5-5478.dukou.info, port: 8305, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: shanghai-router2-hk5-5478.dukou.info, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.15MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇯🇵 日本-2.91MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-552.4KB/s(Youtube:不良林), server: zh01lv5ca01.feiguayun.xyz, port: 37087, type: ss, cipher: aes-256-gcm, password: 763d291b-90ac-49a2-90c5-12bd393d4f45}
-  - {name: 🇨🇳 中国-380.2KB/s(Youtube:不良林), server: 106.75.168.104, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-12.01MB/s(Youtube:不良林), server: hk-route-12369-1.dukou.info, port: 8301, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: hk-route-12369-1.dukou.info, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.79MB/s(Youtube:不良林), server: shanghai-router1-892412-jp3.dukou.info, port: 6303, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: shanghai-router1-892412-jp3.dukou.info, skip-cert-verify: true}
   - {name: 🇨🇳 中国-2.46MB/s(Youtube:不良林), server: zh01lv5ca05.feiguayun.xyz, port: 37087, type: ss, cipher: aes-256-gcm, password: 763d291b-90ac-49a2-90c5-12bd393d4f45}
-  - {name: 🇨🇳 中国-897.5KB/s(Youtube:不良林), server: zh01lv5ca02.feiguayun.xyz, port: 37087, type: ss, cipher: aes-256-gcm, password: 763d291b-90ac-49a2-90c5-12bd393d4f45}
+  - {name: 🇨🇳 中国-225.5KB/s(Youtube:不良林), server: zh01lv5tw03.feiguayun.xyz, port: 31187, type: ss, cipher: aes-256-gcm, password: 763d291b-90ac-49a2-90c5-12bd393d4f45}
+  - {name: 🇨🇳 中国-11.81MB/s(Youtube:不良林), server: tw-cn-hk-relay-1-97861a.dukou.info, port: 5301, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: tw-cn-hk-relay-1-97861a.dukou.info, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-1.60MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-550.6KB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇺🇸 美国-8.51MB/s(Youtube:不良林), server: 20.210.229.72, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-7.85MB/s(Youtube:不良林), server: 20.210.229.72, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-6.58MB/s(Youtube:不良林), server: 20.210.229.72, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-225.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-557.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-552.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-380.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.79MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-897.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-225.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.81MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-550.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.58MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-5.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-225.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-557.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-552.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-380.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.79MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-897.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-225.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.81MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-550.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.58MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-225.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-557.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-552.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-380.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.79MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-897.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-225.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.81MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-550.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.58MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-550.6KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-5.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-225.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-557.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-552.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-380.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.79MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-897.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-225.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.81MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-550.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.58MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-5.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-225.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-557.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-552.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-380.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.79MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-897.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-225.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.81MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-550.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.58MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-5.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-225.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-557.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-552.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-380.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.79MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-897.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-225.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.81MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-550.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.58MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-5.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-225.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-557.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-552.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-380.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.79MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-897.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-225.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.81MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-550.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-6.58MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
